--- a/binkw32/binkw32.vcxproj
+++ b/binkw32/binkw32.vcxproj
@@ -196,6 +196,7 @@ call ..\buildDetours.bat "$(VS140COMNTOOLS)VsDevCmd.bat" ..\Detours
     <ClInclude Include="..\Detours\src\detver.h" />
     <ClInclude Include="include\autodialog.h" />
     <ClInclude Include="include\d2string.h" />
+    <ClInclude Include="include\dialoginterf.h" />
     <ClInclude Include="include\game.h" />
     <ClInclude Include="include\hooks.h" />
     <ClInclude Include="include\interface.h" />
