--- a/binkw32/binkw32.vcxproj.filters
+++ b/binkw32/binkw32.vcxproj.filters
@@ -95,6 +95,9 @@
     <ClInclude Include="include\interffullscreen.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="include\menubase.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
     <ClInclude Include="include\dialoginterf.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
