--- a/binkw32/binkw32.vcxproj
+++ b/binkw32/binkw32.vcxproj
@@ -203,6 +203,7 @@ call ..\buildDetours.bat "$(VS140COMNTOOLS)VsDevCmd.bat" ..\Detours
     <ClInclude Include="include\interffullscreen.h" />
     <ClInclude Include="include\log.h" />
     <ClInclude Include="include\menubase.h" />
+    <ClInclude Include="include\menunewskirmish.h" />
     <ClInclude Include="include\settings.h" />
     <ClInclude Include="include\stringarray.h" />
     <ClInclude Include="include\version.h" />
