--- a/binkw32/binkw32.vcxproj
+++ b/binkw32/binkw32.vcxproj
@@ -193,6 +193,7 @@ call ..\buildDetours.bat "$(VS140COMNTOOLS)VsDevCmd.bat" ..\Detours
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\menubase.cpp" />
     <ClCompile Include="src\menunewskirmish.cpp" />
+    <ClCompile Include="src\menunewskirmishsingle.cpp" />
     <ClCompile Include="src\settings.cpp" />
     <ClCompile Include="src\stringarray.cpp" />
     <ClCompile Include="src\version.cpp" />
