--- a/binkw32/binkw32.vcxproj
+++ b/binkw32/binkw32.vcxproj
@@ -202,12 +202,15 @@ call ..\buildDetours.bat "$(VS140COMNTOOLS)VsDevCmd.bat" ..\Detours
     <ClInclude Include="..\Detours\src\detours.h" />
     <ClInclude Include="..\Detours\src\detver.h" />
     <ClInclude Include="include\autodialog.h" />
+    <ClInclude Include="include\button.h" />
     <ClInclude Include="include\d2string.h" />
     <ClInclude Include="include\dialoginterf.h" />
+    <ClInclude Include="include\functor.h" />
     <ClInclude Include="include\game.h" />
     <ClInclude Include="include\hooks.h" />
     <ClInclude Include="include\interface.h" />
     <ClInclude Include="include\interffullscreen.h" />
+    <ClInclude Include="include\listbox.h" />
     <ClInclude Include="include\log.h" />
     <ClInclude Include="include\menubase.h" />
     <ClInclude Include="include\menunewskirmish.h" />
