--- a/binkw32/binkw32.vcxproj
+++ b/binkw32/binkw32.vcxproj
@@ -195,6 +195,7 @@ call ..\buildDetours.bat "$(VS140COMNTOOLS)VsDevCmd.bat" ..\Detours
     <ClCompile Include="src\menunewskirmish.cpp" />
     <ClCompile Include="src\menunewskirmishsingle.cpp" />
     <ClCompile Include="src\scenariodata.cpp" />
+    <ClCompile Include="src\scenariodataarray.cpp" />
     <ClCompile Include="src\settings.cpp" />
     <ClCompile Include="src\stringarray.cpp" />
     <ClCompile Include="src\version.cpp" />
@@ -217,6 +218,7 @@ call ..\buildDetours.bat "$(VS140COMNTOOLS)VsDevCmd.bat" ..\Detours
     <ClInclude Include="include\menunewskirmish.h" />
     <ClInclude Include="include\menunewskirmishsingle.h" />
     <ClInclude Include="include\scenariodata.h" />
+    <ClInclude Include="include\scenariodataarray.h" />
     <ClInclude Include="include\settings.h" />
     <ClInclude Include="include\stringarray.h" />
     <ClInclude Include="include\version.h" />
