--- a/binkw32/binkw32.vcxproj
+++ b/binkw32/binkw32.vcxproj
@@ -183,6 +183,7 @@ call ..\buildDetours.bat "$(VS140COMNTOOLS)VsDevCmd.bat" ..\Detours
     <ClCompile Include="..\fmt\src\os.cc" />
     <ClCompile Include="src\autodialog.cpp" />
     <ClCompile Include="src\button.cpp" />
+    <ClCompile Include="src\currency.cpp" />
     <ClCompile Include="src\d2string.cpp" />
     <ClCompile Include="src\dialoginterf.cpp" />
     <ClCompile Include="src\functor.cpp" />
@@ -205,6 +206,7 @@ call ..\buildDetours.bat "$(VS140COMNTOOLS)VsDevCmd.bat" ..\Detours
     <ClInclude Include="..\Detours\src\detver.h" />
     <ClInclude Include="include\autodialog.h" />
     <ClInclude Include="include\button.h" />
+    <ClInclude Include="include\currency.h" />
     <ClInclude Include="include\d2string.h" />
     <ClInclude Include="include\dialoginterf.h" />
     <ClInclude Include="include\functor.h" />
