--- a/binkw32/binkw32.vcxproj
+++ b/binkw32/binkw32.vcxproj
@@ -214,6 +214,7 @@ call ..\buildDetours.bat "$(VS140COMNTOOLS)VsDevCmd.bat" ..\Detours
     <ClInclude Include="include\functor.h" />
     <ClInclude Include="include\game.h" />
     <ClInclude Include="include\hooks.h" />
+    <ClInclude Include="include\intarray.h" />
     <ClInclude Include="include\interface.h" />
     <ClInclude Include="include\interffullscreen.h" />
     <ClInclude Include="include\listbox.h" />
