--- a/binkw32/binkw32.vcxproj
+++ b/binkw32/binkw32.vcxproj
@@ -186,6 +186,7 @@ call ..\buildDetours.bat "$(VS140COMNTOOLS)VsDevCmd.bat" ..\Detours
     <ClCompile Include="src\currency.cpp" />
     <ClCompile Include="src\d2string.cpp" />
     <ClCompile Include="src\dialoginterf.cpp" />
+    <ClCompile Include="src\dynamiccast.cpp" />
     <ClCompile Include="src\functor.cpp" />
     <ClCompile Include="src\game.cpp" />
     <ClCompile Include="src\hooks.cpp" />
@@ -211,6 +212,7 @@ call ..\buildDetours.bat "$(VS140COMNTOOLS)VsDevCmd.bat" ..\Detours
     <ClInclude Include="include\currency.h" />
     <ClInclude Include="include\d2string.h" />
     <ClInclude Include="include\dialoginterf.h" />
+    <ClInclude Include="include\dynamiccast.h" />
     <ClInclude Include="include\functor.h" />
     <ClInclude Include="include\game.h" />
     <ClInclude Include="include\hooks.h" />
