Add GSL library as a sibmodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "fmt"]
 	path = fmt
 	url = https://github.com/fmtlib/fmt.git
+[submodule "GSL"]
+	path = GSL
+	url = https://github.com/microsoft/GSL.git
