--- a/binkw32/binkw32.vcxproj
+++ b/binkw32/binkw32.vcxproj
@@ -141,7 +141,7 @@ call ..\buildDetours.bat "$(VS140COMNTOOLS)VsDevCmd.bat" ..\Detours
       <PrecompiledHeaderFile>
       </PrecompiledHeaderFile>
       <LanguageStandard>stdcpp17</LanguageStandard>
-      <AdditionalIncludeDirectories>$(ProjectDir)..\Detours\src;$(ProjectDir)..\fmt\include;$(ProjectDir)include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)..\Detours\src;$(ProjectDir)..\GSL\include;$(ProjectDir)..\fmt\include;$(ProjectDir)include\dbf;$(ProjectDir)include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
     </ClCompile>
     <Link>
@@ -185,6 +185,8 @@ call ..\buildDetours.bat "$(VS140COMNTOOLS)VsDevCmd.bat" ..\Detours
     <ClCompile Include="src\button.cpp" />
     <ClCompile Include="src\currency.cpp" />
     <ClCompile Include="src\d2string.cpp" />
+    <ClCompile Include="src\dbf\dbffile.cpp" />
+    <ClCompile Include="src\dbf\dbfrecord.cpp" />
     <ClCompile Include="src\dialoginterf.cpp" />
     <ClCompile Include="src\dynamiccast.cpp" />
     <ClCompile Include="src\functor.cpp" />
@@ -211,6 +213,10 @@ call ..\buildDetours.bat "$(VS140COMNTOOLS)VsDevCmd.bat" ..\Detours
     <ClInclude Include="include\categoryids.h" />
     <ClInclude Include="include\currency.h" />
     <ClInclude Include="include\d2string.h" />
+    <ClInclude Include="include\dbf\dbfcolumn.h" />
+    <ClInclude Include="include\dbf\dbffile.h" />
+    <ClInclude Include="include\dbf\dbfheader.h" />
+    <ClInclude Include="include\dbf\dbfrecord.h" />
     <ClInclude Include="include\dialoginterf.h" />
     <ClInclude Include="include\dynamiccast.h" />
     <ClInclude Include="include\functor.h" />
