Support new soldier columns in Grace.dbf
New columns SOLDIER_N can be added to Grace.dbf.
Current implementation checks up to 10 new columns
with N starting from 6.
Unit ids from these columns will be used to hire units
in cities and capital.

--- a/binkw32/binkw32.vcxproj.filters
+++ b/binkw32/binkw32.vcxproj.filters
@@ -105,6 +105,9 @@
     <ClCompile Include="src\dbfaccess.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="src\unitsforhire.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Detours\src\detver.h">
@@ -222,6 +225,9 @@
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
     <ClInclude Include="include\dbfaccess.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="include\unitsforhire.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
