--- a/binkw32/binkw32.vcxproj
+++ b/binkw32/binkw32.vcxproj
@@ -204,6 +204,7 @@ call ..\buildDetours.bat "$(VS140COMNTOOLS)VsDevCmd.bat" ..\Detours
     <ClCompile Include="src\scenariodataarray.cpp" />
     <ClCompile Include="src\settings.cpp" />
     <ClCompile Include="src\stringarray.cpp" />
+    <ClCompile Include="src\unitbranchcat.cpp" />
     <ClCompile Include="src\unitsforhire.cpp" />
     <ClCompile Include="src\version.cpp" />
   </ItemGroup>
@@ -245,6 +246,7 @@ call ..\buildDetours.bat "$(VS140COMNTOOLS)VsDevCmd.bat" ..\Detours
     <ClInclude Include="include\stringandid.h" />
     <ClInclude Include="include\stringarray.h" />
     <ClInclude Include="include\textandid.h" />
+    <ClInclude Include="include\unitbranchcat.h" />
     <ClInclude Include="include\unitsforhire.h" />
     <ClInclude Include="include\version.h" />
     <ClInclude Include="resource.h" />
