--- a/binkw32/binkw32.vcxproj
+++ b/binkw32/binkw32.vcxproj
@@ -192,6 +192,7 @@ call ..\buildDetours.bat "$(VS140COMNTOOLS)VsDevCmd.bat" ..\Detours
     <ClCompile Include="src\dynamiccast.cpp" />
     <ClCompile Include="src\functor.cpp" />
     <ClCompile Include="src\game.cpp" />
+    <ClCompile Include="src\globaldata.cpp" />
     <ClCompile Include="src\hooks.cpp" />
     <ClCompile Include="src\linkedlist.cpp" />
     <ClCompile Include="src\listbox.cpp" />
@@ -227,6 +228,7 @@ call ..\buildDetours.bat "$(VS140COMNTOOLS)VsDevCmd.bat" ..\Detours
     <ClInclude Include="include\dynamiccast.h" />
     <ClInclude Include="include\functor.h" />
     <ClInclude Include="include\game.h" />
+    <ClInclude Include="include\globaldata.h" />
     <ClInclude Include="include\hooks.h" />
     <ClInclude Include="include\intarray.h" />
     <ClInclude Include="include\interface.h" />
