--- a/binkw32/binkw32.vcxproj.filters
+++ b/binkw32/binkw32.vcxproj.filters
@@ -251,6 +251,9 @@
     <ClInclude Include="include\playerbuildings.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="include\middatacache.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
     <ClInclude Include="include\midgardobjectmap.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
