--- a/binkw32/binkw32.vcxproj
+++ b/binkw32/binkw32.vcxproj
@@ -246,6 +246,7 @@ call ..\buildDetours.bat "$(VS140COMNTOOLS)VsDevCmd.bat" ..\Detours
     <ClInclude Include="include\midobject.h" />
     <ClInclude Include="include\midplayer.h" />
     <ClInclude Include="include\midscenarioobject.h" />
+    <ClInclude Include="include\mqanimation.h" />
     <ClInclude Include="include\mqnettraffic.h" />
     <ClInclude Include="include\playerbuildings.h" />
     <ClInclude Include="include\racetype.h" />
