--- a/binkw32/binkw32.vcxproj
+++ b/binkw32/binkw32.vcxproj
@@ -228,6 +228,7 @@ call ..\buildDetours.bat "$(VS140COMNTOOLS)VsDevCmd.bat" ..\Detours
     <ClInclude Include="include\dynamiccast.h" />
     <ClInclude Include="include\functor.h" />
     <ClInclude Include="include\game.h" />
+    <ClInclude Include="include\gamesettings.h" />
     <ClInclude Include="include\globaldata.h" />
     <ClInclude Include="include\hooks.h" />
     <ClInclude Include="include\intarray.h" />
