--- a/binkw32/binkw32.vcxproj
+++ b/binkw32/binkw32.vcxproj
@@ -255,6 +255,7 @@ call ..\buildDetours.bat "$(VS140COMNTOOLS)VsDevCmd.bat" ..\Detours
     <ClInclude Include="include\mqnetsystem.h" />
     <ClInclude Include="include\mqnettraffic.h" />
     <ClInclude Include="include\mqthread.h" />
+    <ClInclude Include="include\netdplayservice.h" />
     <ClInclude Include="include\playerbuildings.h" />
     <ClInclude Include="include\racetype.h" />
     <ClInclude Include="include\scenariodata.h" />
