--- a/binkw32/binkw32.vcxproj.filters
+++ b/binkw32/binkw32.vcxproj.filters
@@ -117,6 +117,9 @@
     <ClCompile Include="src\unitbranchcat.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="src\buildingcat.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Detours\src\detver.h">
@@ -294,6 +297,9 @@
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
     <ClInclude Include="include\netdplaysession.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="include\buildingcat.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
