--- a/binkw32/binkw32.vcxproj
+++ b/binkw32/binkw32.vcxproj
@@ -183,6 +183,7 @@ call ..\buildDetours.bat "$(VS140COMNTOOLS)VsDevCmd.bat" ..\Detours
     <ClCompile Include="..\fmt\src\os.cc" />
     <ClCompile Include="src\autodialog.cpp" />
     <ClCompile Include="src\buildingcat.cpp" />
+    <ClCompile Include="src\buildingtype.cpp" />
     <ClCompile Include="src\button.cpp" />
     <ClCompile Include="src\currency.cpp" />
     <ClCompile Include="src\d2string.cpp" />
@@ -216,6 +217,7 @@ call ..\buildDetours.bat "$(VS140COMNTOOLS)VsDevCmd.bat" ..\Detours
     <ClInclude Include="..\Detours\src\detver.h" />
     <ClInclude Include="include\autodialog.h" />
     <ClInclude Include="include\buildingcat.h" />
+    <ClInclude Include="include\buildingtype.h" />
     <ClInclude Include="include\button.h" />
     <ClInclude Include="include\categories.h" />
     <ClInclude Include="include\categoryids.h" />
