--- a/binkw32/binkw32.vcxproj
+++ b/binkw32/binkw32.vcxproj
@@ -190,6 +190,7 @@ call ..\buildDetours.bat "$(VS140COMNTOOLS)VsDevCmd.bat" ..\Detours
     <ClCompile Include="src\dbfaccess.cpp" />
     <ClCompile Include="src\dbf\dbffile.cpp" />
     <ClCompile Include="src\dbf\dbfrecord.cpp" />
+    <ClCompile Include="src\dbtable.cpp" />
     <ClCompile Include="src\dialoginterf.cpp" />
     <ClCompile Include="src\dynamiccast.cpp" />
     <ClCompile Include="src\functor.cpp" />
@@ -229,6 +230,7 @@ call ..\buildDetours.bat "$(VS140COMNTOOLS)VsDevCmd.bat" ..\Detours
     <ClInclude Include="include\dbf\dbffile.h" />
     <ClInclude Include="include\dbf\dbfheader.h" />
     <ClInclude Include="include\dbf\dbfrecord.h" />
+    <ClInclude Include="include\dbtable.h" />
     <ClInclude Include="include\dialoginterf.h" />
     <ClInclude Include="include\dynamiccast.h" />
     <ClInclude Include="include\functor.h" />
