--- a/binkw32/binkw32.vcxproj
+++ b/binkw32/binkw32.vcxproj
@@ -197,7 +197,7 @@ call ..\buildDetours.bat "$(VS140COMNTOOLS)VsDevCmd.bat" ..\Detours
     <ClCompile Include="src\game.cpp" />
     <ClCompile Include="src\globaldata.cpp" />
     <ClCompile Include="src\hooks.cpp" />
-    <ClCompile Include="src\linkedlist.cpp" />
+    <ClCompile Include="src\idlist.cpp" />
     <ClCompile Include="src\listbox.cpp" />
     <ClCompile Include="src\log.cpp" />
     <ClCompile Include="src\main.cpp" />
@@ -239,6 +239,7 @@ call ..\buildDetours.bat "$(VS140COMNTOOLS)VsDevCmd.bat" ..\Detours
     <ClInclude Include="include\gamesettings.h" />
     <ClInclude Include="include\globaldata.h" />
     <ClInclude Include="include\hooks.h" />
+    <ClInclude Include="include\idlist.h" />
     <ClInclude Include="include\intarray.h" />
     <ClInclude Include="include\interface.h" />
     <ClInclude Include="include\interffullscreen.h" />
