--- a/binkw32/binkw32.vcxproj
+++ b/binkw32/binkw32.vcxproj
@@ -208,6 +208,7 @@ call ..\buildDetours.bat "$(VS140COMNTOOLS)VsDevCmd.bat" ..\Detours
     <ClCompile Include="src\midgardid.cpp" />
     <ClCompile Include="src\scenariodata.cpp" />
     <ClCompile Include="src\scenariodataarray.cpp" />
+    <ClCompile Include="src\scenarioheader.cpp" />
     <ClCompile Include="src\settings.cpp" />
     <ClCompile Include="src\stringarray.cpp" />
     <ClCompile Include="src\unitbranchcat.cpp" />
@@ -272,6 +273,7 @@ call ..\buildDetours.bat "$(VS140COMNTOOLS)VsDevCmd.bat" ..\Detours
     <ClInclude Include="include\racetype.h" />
     <ClInclude Include="include\scenariodata.h" />
     <ClInclude Include="include\scenariodataarray.h" />
+    <ClInclude Include="include\scenarioheader.h" />
     <ClInclude Include="include\settings.h" />
     <ClInclude Include="include\stringandid.h" />
     <ClInclude Include="include\stringarray.h" />
