Add CInterfDialog structure

--- a/binkw32/binkw32.vcxproj.filters
+++ b/binkw32/binkw32.vcxproj.filters
@@ -338,6 +338,9 @@
     <ClInclude Include="include\smartptr.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="include\interfdialog.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="module.rc">
